Added Buttons, Sprites, and Animations for the Player

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="magenta">#D136F4</color>
-    <color name="player">#00F44336</color>
+    <color name="player">#00FF00</color>
+    <color name="button">#CFCFCF</color>
 </resources>
